[package]
name = "cbor-nemo157-com"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cbor-diag = "0.1.12"
serde = { version = "1.0.183", features = ["derive"] }
futures = "0.3.28"
serde_json = "1.0.104"
fehler = "1.0.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dependencies.wasm-bindgen]
version = "0.2.87"
features = ["serde-serialize"]

[dev-dependencies]
anyhow = "1.0.74"
port_check = "0.1.5"
once_cell = "1.18.0"
libc = "0.2.147"
indoc = "2.0.3"
headless_chrome = "1.0.5"
pretty_env_logger = "0.5.0"
