[package]
name = "cbor-nemo157-com"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cbor-diag = "0.1.12"
serde = { version = "1.0.171", features = ["derive"] }
futures = "0.3.32"
serde_json = "1.0.109"
fehler = "1.0.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

# avoid precompiled binaries https://github.com/serde-rs/serde/issues/2538
serde_derive = { version = "1.0, <1.0.172", default-features = false }

[dependencies.wasm-bindgen]
version = "0.2.108"
features = ["serde-serialize"]

[dev-dependencies]
anyhow = "1.0.102"
port_check = "0.3.0"
once_cell = "1.21.3"
libc = "0.2.182"
indoc = "2.0.7"
headless_chrome = "1.0.18"
pretty_env_logger = "0.5.0"
